# HYDRA

./: .dockerignore  .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-data-infrastructure-options-math-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-signal-layer-baseline-model/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-sandbox-experiment-infrastructure/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docker/: .env.example  Dockerfile  docker-compose.yml
scripts/: plot_bl_density.py
src/hydra/: __init__.py
src/hydra/agent/: budget.py  (+11 more)
tests/: conftest.py  test_baseline_model.py  test_bl_density.py  test_broker.py  test_circuit_breakers.py  test_cli.py  test_cot_scoring.py  test_dashboard_api.py  test_dashboard_app.py  test_dashboard_enhanced.py  test_dashboard_pages.py  test_data_quality.py  test_divergence_detector.py  test_drift.py  test_evaluation.py  test_evaluator.py  test_feature_store.py  test_fill_journal.py  test_greeks_flow.py  test_ib_ingest.py  test_implied_moments.py  test_ingestion_cot.py  test_ingestion_futures.py  test_ingestion_options.py  test_integration_execution.py  test_journal.py  test_market_config.py  test_model_features.py  test_observer.py  test_options_features.py  test_order_manager.py  test_parquet_lake.py  test_position_sizing.py  test_reconciler.py  test_registry.py  test_replay.py  test_risk_gate.py  test_runner.py  test_slippage.py  test_svi_surface.py  (+1 more)
tests/agent/: test_autonomy.py  test_budget.py  test_dedup.py  test_diagnostician.py  test_experiment_runner.py  test_hypothesis.py  test_integration.py  test_llm_client.py  test_loop.py  test_promotion.py  test_rollback.py
(+114 files in other folders)
