[project]
name = "hydra"
version = "0.1.0"
description = "Autonomous trading model improvement system for thin commodity futures markets"
readme = "README.md"
authors = [
    { name = "Tristan Farmer", email = "159447266+001TMF@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pyarrow>=15.0",
    "structlog>=24.1",
    "apscheduler>=3.10",
    "databento",
    "cot-reports",
    "lightgbm>=4.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "matplotlib",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
