[project]
name = "hydra"
version = "0.1.0"
description = "Autonomous trading model improvement system for thin commodity futures markets"
readme = "README.md"
authors = [
    { name = "Tristan Farmer", email = "159447266+001TMF@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pyarrow>=15.0",
    "structlog>=24.1",
    "apscheduler>=3.10",
    "databento",
    "cot-reports",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "mlflow>=3.9",
    "river>=0.21",
    "typer[all]>=0.12",
    "sentence-transformers>=5.2.3",
    "openai>=2.21.0",
    "instructor>=1.14.5",
    "tenacity>=9.1.4",
    "ib-async>=2.1.0",
]

[project.scripts]
hydra = "hydra.cli.app:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "matplotlib",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
